Updated Session 1 Project
Updated Session 1 Project

--- a/FSDI 103/session 1/index.html
+++ b/FSDI 103/session 1/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Session 1 JS</title>
 </head>
 <body>
-    
+    <h1> FSDI 103 - Class 1 - Assignment 1 </h1>
+
+<!--     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloribus possimus aliquam repudiandae in dolores voluptas labore explicabo provident assumenda vitae, inventore asperiores voluptate commodi. Tenetur beatae rerum id non!</p> -->
+    <!-- This Code executes or points to the javascript file -->
+    <script src="script.js"></script>
+
 </body>
 </html>
+
+
