--- a/FSDI 103/Session 2/index.html
+++ b/FSDI 103/Session 2/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Session #2 JS</title>
+    <title>FSDI 103 - Class 2 - Assignment 2</title>
 </head>
 
+<p>This is for Session 2, Class 2, assignment 2.</p>
 
-
+<script src="script.js"></script>
 
 <body>
     
