Fixed Color input
I needed to change the input field from number to a text field

--- a/FSDI 104/Class 4/Competency Report/register.html
+++ b/FSDI 104/Class 4/Competency Report/register.html
@@ -33,7 +33,7 @@
             </div>
             <div class="input-container">
                 <label>Color:</label>
-                <input type="number" id="petColor">
+                <input type="text" id="petColor">
             </div>
             <div class="input-container">
                 <label>Gender:</label>
