--- a/FSDI 105/FSDI 105 - Competency Report/index.html
+++ b/FSDI 105/FSDI 105 - Competency Report/index.html
@@ -22,7 +22,7 @@
     </nav>
     </header>
     <main class="loginPage">
-    <h1> Login to our amazing system</h1>
+    <h1> Login to experience our site to the fullest!!</h1>
 
     <div id="loginForm" class="login-container">
         <h3>Member Login</h3>
