--- a/FSDI 106/FSDI 106 - Assignment 2/index.html
+++ b/FSDI 106/FSDI 106 - Assignment 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FSDI 106: Assignment 3</title>
+    <title>FSDI 106: Assignment 2</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand">FSDI 106: Assignment 3 (Task Manager)</a>
+            <a class="navbar-brand">FSDI 106: Assignment 2</a>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
